// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HarpnotesLayout > full sheet snapshot > single_note sheet matches snapshot 1`] = `
{
  "Annotation": 9,
  "Ellipse": 1,
  "Path": 3,
}
`;

exports[`HarpnotesLayout > full sheet snapshot > two_voices sheet matches snapshot 1`] = `
{
  "Annotation": 9,
  "Ellipse": 10,
  "FlowLine": 10,
  "Path": 3,
}
`;

exports[`HarpnotesLayout > single_note > matches snapshot 1`] = `
[
  {
    "center": [
      60.3,
      18,
    ],
    "color": "black",
    "confKey": undefined,
    "dotted": false,
    "fill": "filled",
    "hasbarover": false,
    "lineWidth": 0.5,
    "origin": {
      "barDecorations": [],
      "beat": 0,
      "countNote": null,
      "decorations": [],
      "duration": 16,
      "endPos": [
        1,
        1,
      ],
      "firstInPart": false,
      "jumpEnds": [],
      "jumpStarts": [],
      "lyrics": null,
      "measureCount": 0,
      "measureStart": false,
      "pitch": 48,
      "slurEnds": [],
      "slurStarts": [],
      "startPos": [
        1,
        1,
      ],
      "tieEnd": false,
      "tieStart": false,
      "time": 0,
      "tuplet": 1,
      "tupletEnd": false,
      "tupletStart": false,
      "type": "Note",
      "variant": 0,
      "visible": true,
      "znId": "0-88",
    },
    "size": [
      2.625,
      1.275,
    ],
    "type": "Ellipse",
    "visible": true,
  },
]
`;
